k8s/base/payment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment
  template:
    metadata:
      labels:
        app: payment
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8085"
        prometheus.io/path: "/actuator/prometheus"
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: payment
          image: ghcr.io/prgrms-be-adv-devcourse/payment:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8085
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8085
            initialDelaySeconds: 45
            periodSeconds: 10
            timeoutSeconds: 5
