k8s/base/payment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: payment
spec:
  selector:
    app: payment
  ports:
    - name: http
      port: 8085
      targetPort: 8085
